tests/semantic/fail/int_plus_string.c
int a = 1; char* s = "x";
int z = a + s; // E001: tipo inválido em operação aritmética
